--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -1,25 +1,36 @@
+{% load static %}
 <html>
     <head>
         <title>PIwoYErbaWIno</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/strona.css' %}">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div>
+        <div class='page-header'>
             <h1><a href="/">PIwo Yerba WIno</a></h1>
             <br/>
         </div>
         
-        {% for yerba in yerbas %}
-            <div>
-                <p> {{ yerba.firma }} <a href="">{{ yerba.nazwa }}</a></p>
-                <p>Zapylenie: {{ yerba.zapylenie }}</p>
-                <p>Aromat: {{ yerba.aromat }}</p>
-                <p>Moc: {{ yerba.moc }}</p>
-                <p>Goryczka: {{ yerba.goryczka }}</p>
-                <p>Nuty smakowe: {{ yerba.nuty_smakowe }}</p>
-                <p>Ocena: {{ yerba.ocena }}</p>
-                <p>Uwagi: {{ yerba.uwagi }}</p>
-                <br/>
-            </div>   
-        {% endfor %}
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% for yerba in yerbas %}
+                        <div class="strona">
+                            <h3><a href="">{{ yerba.firma }} {{ yerba.nazwa }}</a></h3>
+                            <p>Zapylenie: {{ yerba.zapylenie }}</p>
+                            <p>Aromat: {{ yerba.aromat }}</p>
+                            <p>Moc: {{ yerba.moc }}</p>
+                            <p>Goryczka: {{ yerba.goryczka }}</p>
+                            <p>Nuty smakowe: {{ yerba.nuty_smakowe }}</p>
+                            <p>Ocena: {{ yerba.ocena }}</p>
+                            <p>Uwagi: {{ yerba.uwagi }}</p>
+                            <br/>
+                        </div>   
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
     </body>
 </html>
