--- a/strona/templates/strona/base.html
+++ b/strona/templates/strona/base.html
@@ -9,6 +9,11 @@
     </head>
     <body>
         <div class='page-header'>
+            {% if user.is_authenticated %}
+                <p class="top-menu">Witaj {{ user.username }} <small>(<a href="{% url 'logout' %}">Wyloguj</a>)</small></p>
+            {% else %} 
+                <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+            {% endif %}
             <h1><a href="/">PIwo Yerba WIno</a></h1>
         </div>
         <div class="content container">
