--- a/strona/templates/strona/glowna.html
+++ b/strona/templates/strona/glowna.html
@@ -3,5 +3,6 @@
 {% block content %}
     <div class='strona'>
         <h1><a href="{% url 'yerba_list' %}">Lista Yerb</a></h1>
+        <h1><a href="{% url 'piwo_list' %}">Lista Piw</a></h1>
     </div>
 {% endblock %}
