--- a/strona/static/css/strona.css
+++ b/strona/static/css/strona.css
@@ -38,6 +38,10 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
+.wino-form textarea, .wino-form input {
+    width: 100%;
+}
+
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
     float: right;
