--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -12,7 +12,7 @@
             <p>Aromat: {{ yerba.aromat }}</p>
             <p>Moc: {{ yerba.moc }}</p>
             <p>Goryczka: {{ yerba.goryczka }}</p>
-            <p>Nuty smakowe: {{ yerba.nuty_smakowe }}</p>
+            <p>Nuty owocowe: {{ yerba.nuty_owocowe }}</p>
             <p>Ocena: {{ yerba.ocena }}</p>
             <p>Uwagi: {{ yerba.uwagi }}</p>
             <br/>
