--- a/strona/templates/strona/glowna.html
+++ b/strona/templates/strona/glowna.html
@@ -4,5 +4,6 @@
     <div class='strona'>
         <h1><a href="{% url 'yerba_list' %}">Lista Yerb</a></h1>
         <h1><a href="{% url 'piwo_list' %}">Lista Piw</a></h1>
+        <h1><a href="{% url 'wino_list' %}">Lista Win</a></h1>
     </div>
 {% endblock %}
