--- a/strona/templates/strona/yerba_detail.html
+++ b/strona/templates/strona/yerba_detail.html
@@ -11,7 +11,7 @@
             <a class="btn btn-default" href="{% url 'yerba_edit' pk=yerba.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
             <a class="btn btn-default" href="{% url 'yerba_remove' pk=yerba.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
         {% endif %}
-        <h2>{{ yerba.firma }} {{ yerba.nazwa }}</h2>
+        <h2>{{ yerba.firma }}: {{ yerba.nazwa }}</h2>
         <p>Zapylenie: {{ yerba.zapylenie }}</p>
         <p>Aromat: {{ yerba.aromat }}</p>
         <p>Moc: {{ yerba.moc }}</p>
