--- a/strona/static/css/strona.css
+++ b/strona/static/css/strona.css
@@ -42,6 +42,10 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
+.kawa-form textarea, .kawa-form input {
+    width: 100%;
+}
+
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
     float: right;
