--- a/strona/templates/strona/glowna.html
+++ b/strona/templates/strona/glowna.html
@@ -5,5 +5,6 @@
         <h1><a href="{% url 'yerba_list' %}">Lista Yerb</a></h1>
         <h1><a href="{% url 'piwo_list' %}">Lista Piw</a></h1>
         <h1><a href="{% url 'wino_list' %}">Lista Win</a></h1>
+        <h1><a href="{% url 'kawa_list' %}">Lista Kaw</a></h1>
     </div>
 {% endblock %}
