--- a/strona/templates/strona/base.html
+++ b/strona/templates/strona/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <title>PIwoYErbaWIno</title>
+        <title>Lubię liczby</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/strona.css' %}">
@@ -14,7 +14,7 @@
             {% else %} 
                 <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
-            <h1><a href="/">PIwo Yerba WIno</a></h1>
+            <h1><a href="/">Lubię liczby</a></h1>
         </div>
         <div class="content container">
             <div class="row">
