--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -1,8 +1,8 @@
 {% extends 'strona/base.html' %}
 
 {% block content %}
-            <a href="{% url 'yerba_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <h1>Lista Yerb</h1>
+    <h1>Lista Yerb<br/><small><a href="{% url 'yerba_new' %}"><small><span class="glyphicon glyphicon-plus"></span></small> Dodaj nową recencję</small></a></h1>
+    <br/>
     {% for yerba in yerbas %}
         <div class="strona">
             <h3><a href="{% url 'yerba_detail' pk=yerba.pk %}">{{ yerba.firma }}: {{ yerba.nazwa }}</a></h3>
