--- a/strona/templates/strona/wino_list.html
+++ b/strona/templates/strona/wino_list.html
@@ -4,19 +4,21 @@
     <h1>Lista Win<br/><small><a href="{% url 'wino_new' %}"><small><span class="glyphicon glyphicon-plus"></span></small> Dodaj nową recencję</small></a></h1>
     <br/>
     {% for wino in winos %}
-        <div class="strona">
-            <h3><a href="{% url 'wino_detail' pk=wino.pk %}">{{ wino.firma }}: {{ wino.nazwa }}</a></h3>
-            <p>Typ: {{ wino.typ }}</p>
-            <p>Kolor: {{ wino.kolor }}</p>
-            <p>Klarowność: {{ wino.klarowność }}</p>
-            <p>Musowanie: {{ wino.musowanie }}</p>
-            <p>Aromat: {{ wino.aromat }}</p>
-            <p>Moc: {{ wino.moc }}</p>
-            <p>Nuty owocowe: {{ wino.nuty_owocowe }}</p>
-            <p>Ocena: {{ wino.ocena }}</p>
-            <p>Uwagi: {{ wino.uwagi }}</p>
-            <br/>
-        </div>   
+        {% if wino.zatwierdzony %}
+            <div class="strona">
+                <h3><a href="{% url 'wino_detail' pk=wino.pk %}">{{ wino.firma }}: {{ wino.nazwa }}</a></h3>
+                <p>Typ: {{ wino.typ }}</p>
+                <p>Kolor: {{ wino.kolor }}</p>
+                <p>Klarowność: {{ wino.klarowność }}</p>
+                <p>Musowanie: {{ wino.musowanie }}</p>
+                <p>Aromat: {{ wino.aromat }}</p>
+                <p>Moc: {{ wino.moc }}</p>
+                <p>Nuty owocowe: {{ wino.nuty_owocowe }}</p>
+                <p>Ocena: {{ wino.ocena }}</p>
+                <p>Uwagi: {{ wino.uwagi }}</p>
+                <br/>
+            </div>   
+        {% endif %}
     {% endfor %}
 </div>
 {% endblock %}
