--- a/strona/templates/strona/glowna.html
+++ b/strona/templates/strona/glowna.html
@@ -6,5 +6,8 @@
         <h1><a href="{% url 'piwo_list' %}">Lista Piw</a></h1>
         <h1><a href="{% url 'wino_list' %}">Lista Win</a></h1>
         <h1><a href="{% url 'kawa_list' %}">Lista Kaw</a></h1>
+        {% if user.is_authenticated %}
+            <h1><a href="{% url 'recenzje_list' %}">Recenzje do zatwierdzenia</a></h1>
+        {% endif %}
     </div>
 {% endblock %}
