--- a/strona/templates/strona/kawa_list.html
+++ b/strona/templates/strona/kawa_list.html
@@ -4,17 +4,19 @@
     <h1>Lista Kaw<br/><small><a href="{% url 'kawa_new' %}"><small><span class="glyphicon glyphicon-plus"></span></small> Dodaj nową recencję</small></a></h1>
     <br/>
     {% for kawa in kawas %}
-        <div class="strona">
-            <h3><a href="{% url 'kawa_detail' pk=kawa.pk %}">{{ kawa.firma }}: {{ kawa.nazwa }}</a></h3>
-            <p>Arabica [%]: {{ kawa.arabica }}</p>
-            <p>Robusta [%]: {{ kawa.robusta }}</p>
-            <p>Stopień Palenia: {{ kawa.stopień_palenia }}</p>
-            <p>Kwasowość: {{ kawa.kwasowość }}</p>
-            <p>Moc: {{ kawa.moc }}</p>
-            <p>Ocena: {{ kawa.ocena }}</p>
-            <p>Uwagi: {{ kawa.uwagi }}</p>
-            <br/>
-        </div>   
+        {% if kawa.zatwierdzony %}
+            <div class="strona">
+                <h3><a href="{% url 'kawa_detail' pk=kawa.pk %}">{{ kawa.firma }}: {{ kawa.nazwa }}</a></h3>
+                <p>Arabica [%]: {{ kawa.arabica }}</p>
+                <p>Robusta [%]: {{ kawa.robusta }}</p>
+                <p>Stopień Palenia: {{ kawa.stopień_palenia }}</p>
+                <p>Kwasowość: {{ kawa.kwasowość }}</p>
+                <p>Moc: {{ kawa.moc }}</p>
+                <p>Ocena: {{ kawa.ocena }}</p>
+                <p>Uwagi: {{ kawa.uwagi }}</p>
+                <br/>
+            </div>   
+        {% endif %}
     {% endfor %}
 </div>
 {% endblock %}
