--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -4,17 +4,19 @@
     <h1>Lista Yerb<br/><small><a href="{% url 'yerba_new' %}"><small><span class="glyphicon glyphicon-plus"></span></small> Dodaj nową recencję</small></a></h1>
     <br/>
     {% for yerba in yerbas %}
-        <div class="strona">
-            <h3><a href="{% url 'yerba_detail' pk=yerba.pk %}">{{ yerba.firma }}: {{ yerba.nazwa }}</a></h3>
-            <p>Zapylenie: {{ yerba.zapylenie }}</p>
-            <p>Aromat: {{ yerba.aromat }}</p>
-            <p>Moc: {{ yerba.moc }}</p>
-            <p>Goryczka: {{ yerba.goryczka }}</p>
-            <p>Nuty owocowe: {{ yerba.nuty_owocowe }}</p>
-            <p>Ocena: {{ yerba.ocena }}</p>
-            <p>Uwagi: {{ yerba.uwagi }}</p>
-            <br/>
-        </div>   
+        {% if yerba.zatwierdzony %}
+            <div class="strona">
+                <h3><a href="{% url 'yerba_detail' pk=yerba.pk %}">{{ yerba.firma }}: {{ yerba.nazwa }}</a></h3>
+                <p>Zapylenie: {{ yerba.zapylenie }}</p>
+                <p>Aromat: {{ yerba.aromat }}</p>
+                <p>Moc: {{ yerba.moc }}</p>
+                <p>Goryczka: {{ yerba.goryczka }}</p>
+                <p>Nuty owocowe: {{ yerba.nuty_owocowe }}</p>
+                <p>Ocena: {{ yerba.ocena }}</p>
+                <p>Uwagi: {{ yerba.uwagi }}</p>
+                <br/>
+            </div>  
+        {% endif %} 
     {% endfor %}
 </div>
 {% endblock %}
