--- a/strona/templates/strona/base.html
+++ b/strona/templates/strona/base.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/strona.css' %}">
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.11.1/datatables.min.css"/>
     </head>
     <body>
         <div class='page-header'>
@@ -25,4 +26,10 @@
             </div>
         </div>
     </body>
+        <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.11.1/datatables.min.js"></script>
+        <script type = "text/javascript">
+            $(document).ready(function(){
+                $('#table').DataTable();
+            });
+        </script>
 </html>
