--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -3,20 +3,37 @@
 {% block content %}
     <h1>Lista Yerb<br/><small><a href="{% url 'yerba_new' %}"><small><span class="glyphicon glyphicon-plus"></span></small> Dodaj nową recencję</small></a></h1>
     <br/>
-    {% for yerba in yerbas %}
-        {% if yerba.zatwierdzony %}
-            <div class="strona">
-                <h3><a href="{% url 'yerba_detail' pk=yerba.pk %}">{{ yerba.firma }}: {{ yerba.nazwa }}</a></h3>
-                <p>Zapylenie: {{ yerba.zapylenie }}</p>
-                <p>Aromat: {{ yerba.aromat }}</p>
-                <p>Moc: {{ yerba.moc }}</p>
-                <p>Goryczka: {{ yerba.goryczka }}</p>
-                <p>Nuty owocowe: {{ yerba.nuty_owocowe }}</p>
-                <p>Ocena: {{ yerba.ocena }}</p>
-                <p>Uwagi: {{ yerba.uwagi }}</p>
-                <br/>
-            </div>  
-        {% endif %} 
-    {% endfor %}
-</div>
+    <table id = "table" class = "table table-bordered">
+        <thead class = "alert-success">
+            <tr>
+                <th>Firma</th>
+                <th>Nazwa</th>
+                <th>Zapylenie</th>
+                <th>Aromat</th>
+                <th>Moc</th>
+                <th>Goryczka</th>
+                <th>Nuty owocowe</th>
+                <th>Ocena</th>
+                <th>Uwagi</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for yerba in yerbas %}
+                {% if yerba.zatwierdzony %}
+                    <tr>
+                        <td>{{ yerba.firma }}</td>
+                        <td>{{ yerba.nazwa }}</td>
+                        <td>{{ yerba.zapylenie }}</td>
+                        <td>{{ yerba.aromat }}</td>
+                        <td>{{ yerba.moc }}</td>
+                        <td>{{ yerba.goryczka }}</td>
+                        <td>{{ yerba.nuty_owocowe }}</td>
+                        <td>{{ yerba.ocena }}</td>
+                        <td>{{ yerba.uwagi }}</td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        </tbody>
+    </table>
+
 {% endblock %}
