usunieto smak z piwa i dodano trwalosc yerba

--- a/strona/templates/strona/yerba_detail.html
+++ b/strona/templates/strona/yerba_detail.html
@@ -17,6 +17,7 @@
         <p>Moc: {{ yerba.moc }}</p>
         <p>Goryczka: {{ yerba.goryczka }}</p>
         <p>Nuty owocowe: {{ yerba.nuty_owocowe }}</p>
+        <p>Trwałość: {{ yerba.trwałość }}</p>
         <p>Ocena: {{ yerba.ocena }}</p>
         <p>Uwagi: {{ yerba.uwagi }}</p>
         <br/>
