--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -13,6 +13,7 @@
                 <th>Moc</th>
                 <th>Goryczka</th>
                 <th>Nuty owocowe</th>
+                <th>Trwałość</th>
                 <th>Ocena</th>
             </tr>
         </thead>
@@ -27,6 +28,7 @@
                         <td>{{ yerba.moc }}</td>
                         <td>{{ yerba.goryczka }}</td>
                         <td>{{ yerba.nuty_owocowe }}</td>
+                        <td>{{ yerba.trwałość }}</td>
                         <td>{{ yerba.ocena }}</td>
                     </tr>
                 {% endif %}
