--- a/strona/static/css/strona.css
+++ b/strona/static/css/strona.css
@@ -2,6 +2,7 @@
     background-color: #e6571f;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
+    font-family: 'Lobster', cursive;
 }
 
 body {
