--- a/strona/templates/strona/yerba_list.html
+++ b/strona/templates/strona/yerba_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Lista Yerb<br/><small><a href="{% url 'yerba_new' %}"><small><span class="glyphicon glyphicon-plus"></span></small> Dodaj nową recencję</small></a></h1>
     <br/>
-    <table id = "table" class = "table table-bordered">
+    <table id = "table" class = "table table-bordered display">
         <thead class = "alert-success">
             <tr>
                 <th>Firma</th>
