--- a/strona/templates/strona/wino_detail.html
+++ b/strona/templates/strona/wino_detail.html
@@ -13,10 +13,10 @@
         {% endif %}
         <h2>{{ wino.firma }}: {{ wino.nazwa }}</h2>
         <p>Typ: {{ wino.typ }}</p>
-        <p>Kolor: {{ wino.kolor }}</p>
+        <p>Kolor (jak bardzo ciemne): {{ wino.kolor }}</p>
         <p>Klarowność: {{ wino.klarowność }}</p>
         <p>Musowanie: {{ wino.musowanie }}</p>
-        <p>Aromat: {{ wino.aromat }}</p>
+        <p>Aromat (intensywność): {{ wino.aromat }}</p>
         <p>Moc: {{ wino.moc }}</p>
         <p>Wyczuwalne nuty:</p>
         {% if wino.nuty_zielonych_owoców == "tak" %}
