--- a/strona/templates/strona/wino_detail.html
+++ b/strona/templates/strona/wino_detail.html
@@ -12,13 +12,13 @@
             <a class="btn btn-default" href="{% url 'wino_remove' pk=wino.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
         {% endif %}
         <h2>{{ wino.firma }}: {{ wino.nazwa }}</h2>
-        <p>Typ: {{ wino.typ }}</p>
-        <p>Kolor (jak bardzo ciemne): {{ wino.kolor }}</p>
-        <p>Klarowność: {{ wino.klarowność }}</p>
-        <p>Musowanie: {{ wino.musowanie }}</p>
-        <p>Aromat (intensywność): {{ wino.aromat }}</p>
-        <p>Moc: {{ wino.moc }}</p>
-        <p>Wyczuwalne nuty:</p>
+        <p><b>Typ:</b> {{ wino.typ }}</p>
+        <p><b>Kolor (jak bardzo ciemne):</b> {{ wino.kolor }}</p>
+        <p><b>Klarowność:</b> {{ wino.klarowność }}</p>
+        <p><b>Musowanie:</b> {{ wino.musowanie }}</p>
+        <p><b>Aromat (intensywność):</b> {{ wino.aromat }}</p>
+        <p><b>Moc:</b> {{ wino.moc }}</p>
+        <p><b>Wyczuwalne nuty:</b></p>
         {% if wino.nuty_zielonych_owoców == "tak" %}
             <p>- nuty zielonych owoców</p>
         {% endif %}
@@ -64,8 +64,8 @@
         {% if wino.nuty_minerałów == "tak" %}
             <p>- nuty mineralne</p>
         {% endif %}
-        <p>Ocena: {{ wino.ocena }}</p>
-        <p>Uwagi: {{ wino.uwagi }}</p>
+        <p><b>Ocena:</b> {{ wino.ocena }}</p>
+        <p><b>Uwagi:</b> {{ wino.uwagi }}</p>
         <br/>
         <p>Nie wiesz co oznaczają niektóre nuty? <a href="{% url 'wino_opis_nut' %}">Dowiedz się tutaj!</a></p>
     </div>   
