--- a/strona/templates/strona/base.html
+++ b/strona/templates/strona/base.html
@@ -34,7 +34,7 @@
                 $('#table').DataTable( {
                     "language": {
                         "decimal":        "",
-                        "emptyTable":     "Brak danych w tabeli",
+                        "emptyTable":     "Brak recenzji.",
                         "info":           "Wyświetlono od _START_ do _END_ z _TOTAL_ wyników",
                         "infoEmpty":      "Wyświetlono od 0 do 0 z 0 wyników",
                         "infoFiltered":   "(z _MAX_ wyników w bazie)",
